--- a/clases.html
+++ b/clases.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
     <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="whatsapp">
-            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315" target="_blank">
+                <img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon">
+            </a>
         </div>
         <div class="scroll">
-            <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
+            <a href="#top">
+                <img src="img/icon/scroll top.svg" alt="" class="scroll-icon">
+            </a>
         </div>
         <header>
             <div class="header container" id="e">
@@ -39,7 +44,7 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image18.webp" class="hero-img" alt="">
+                <img src="img/image10.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Formación Artística</h2>
                 </div>
@@ -51,43 +56,43 @@
             </div>
             <seccion class="clases">
                 <div class="clases__list">
-                    <div class="clases__item" class="clases__item-img">
-                        <img src="img/image.webp" class="clases__item-img" alt="">
+                    <div class="clases__item" data-aos="fade-right">
+                        <img src="img/image14.png" class="clases__item-img" alt="">
                         <div class="clases__item-info">
                             <h2>Danza</h2>
                             <p>Nuestras clases de danza se centran en el movimiento, el ritmo y la expresión corporal. Los estudiantes 
                             aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
                             </div>
                         </div>
                     </div>
-                    <div class="clases__item">
+                    <div class="clases__item" data-aos="fade-left">
                         <div class="clases__item-info">
                             <h2>Teatro</h2>
                             <p>Enfocado en el arte de la representación, esta formación cubre técnicas de improvisación, expresión de emociones, 
                             dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
                             </div>
                         </div>
-                        <img src="img/image9.webp" class="clases__item-img" alt="">
+                        <img src="img/image11.webp" class="clases__item-img" alt="">
                     </div>
-                    <div class="clases__item">
-                        <img src="img/image8.webp" class="clases__item-img" alt="">
+                    <div class="clases__item" data-aos="fade-right">
+                        <img src="img/image13.webp" class="clases__item-img" alt="">
                         <div class="clases__item-info">
                             <h2>Actuación</h2>
                             <p>Enfocado en las habilidades necesarias para la interpretación en diversos formatos, como el cine, la televisión y el teatro. Los estudiantes 
                             trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
                             </div>
                         </div>
                     </div>
-                    <div class="clases__item">
+                    <div class="clases__item" data-aos="fade-left">
                         <div class="clases__item-info">
                             <h2>Gimnasia</h2>
                             <p>Las clases de gimnasia combinan fuerza, flexibilidad y gracia. Los 
@@ -95,10 +100,10 @@
                             el control del cuerpo y una postura correcta.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf">Planilla</a></button>
+                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
                             </div>
                         </div>
-                        <img src="img/image11.webp" class="clases__item-img" alt="">
+                        <img src="img/image4.jpg" class="clases__item-img" alt="">
                     </div>
                 </div>
             </seccion>
@@ -120,9 +125,14 @@
                     <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
                 </div>
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
                     <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
