--- a/contacto.html
+++ b/contacto.html
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
         <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="style/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -33,9 +34,9 @@
         </header>
         <main>
             <section class="hero contacto__hero">
-                <img src="img/image10.webp" class="hero-img" alt="">
+                <img src="img/image18.png" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <h2>Contátanos</h2>
+                    <h2>Contáctanos</h2>
                 </div>
             </section>
             <section class="contacto__container container">
@@ -46,10 +47,11 @@
                             <p>Estamos aquí para responder a tus preguntas.</p>
                         </div>
                         <div class="contacto__item-info">
+
                             <img src="img/icon/whatsapp.svg" class="contacto__item-icon-whapp" alt="whatsapp">
                             <h3>WhatsApp</h3>
                             <h4>Envíanos un mensaje directo y te responderemos a la brevedad.</h4>
-                            <button class="btn-1"><a href="https://wa.me/04125504315">Enviar Mensaje</a></button>
+                            <button class="btn-1"><a href="https://wa.me/04125504315" target="_blank">Enviar Mensaje</a></button>
                         </div>
                     </div>
                     <div class="contacto__item">
@@ -62,8 +64,8 @@
                             <h3>Síguenos</h3>
                             <h4>No te pierdas nuestras últimas noticias, eventos y actualizaciones.</h4>
                             <div>
-                                <a href="https://www.facebook.com/academia.lca/"><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
-                                <a href="https://www.instagram.com/academia.lca/"><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
+                                <a href="https://www.facebook.com/academia.lca/" target="_blank"><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
+                                <a href="https://www.instagram.com/academia.lca/" target="_blank"><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
                             </div>
                         </div>
                     </div>
@@ -74,8 +76,7 @@
                         <p>Calle 11 con Av. 15 Sector Dr. Baudilio Lara.</p>
                     </div>
                     <div class="contacto__academia-ubicacion-mapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <div class="contacto__list">
@@ -103,7 +104,7 @@
             </section>
             <div class="download">
                 <button class="download-btn">
-                    <a download="Planilla-LCA" href="download/planilla.pdf" class="download-link">
+                    <a download="Planilla-LCA" href="download/planilla.pdf" class="download-link" target="_blank">
                         <img src="img/icon/download-to-inbox-svgrepo-com.svg" class="download-icon alt="">
                         <div class="download-info">
                             <h2 class="download-title">Descargar Planilla de Inscripción</h2>
@@ -113,5 +114,9 @@
                 </button>
             </div>
         </main>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
