--- a/galeria.html
+++ b/galeria.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Academia LCA - Actividades</title>
+    <title>Academia LCA - Galería</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
     <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="whatsapp">
-            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315" target="_blank"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -39,60 +39,34 @@
         </header>
         <main class="actividades__main">
             <section class="hero">
-                <img src="img/image6.webp" class="hero-img" alt="">
+                <img src="img/image15.png" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Galería</h2>
-                    <h4>Descubre el talento y la dedicación de nuestros estudiantes 
-                    a través de nuestras actividades y eventos.</h4>
                 </div>
             </section>
-            <section class="actividades__carrusel">
-                <div class="actividades__carrusel-container container">
-                    <ul class="actividades__carrusel-list">
-                        <li class="actividades__carrusel-item">
-                            <img src="img/image13.webp" class="actividades__carrusel-item-img">
-                            <h3>Teatro</h3>
-                        </li>
-                        <li class="actividades__carrusel-item">
-                            <img src="img/image11.webp" class="actividades__carrusel-item-img">
-                            <h3>Danza</h3>
-                        </li>
-                        <li class="actividades__carrusel-item">
-                            <img src="img/image15.webp" class="actividades__carrusel-item-img">
-                            <h3>Música</h3>
-                        </li>
-                        <li class="actividades__carrusel-item">
-                            <img src="img/image18.webp" class="actividades__carrusel-item-img">
-                            <h3>Actuación</h3>
-                        </li>
-                    </ul>
-                </div>
+            <section class="galeria">
+                <ul class="galeria__list container">
+                    <li class="galeria__item"><img src="img/image20.webp" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image17.webp" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image19.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image21.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image22.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image23.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image25.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image24.jpg" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><img src="img/image23.png" class="galeria__item-img" alt=""></li>
+                    <li class="galeria__item"><video src="video/video.mp4" class="galeria__item-img" controls><li>
+                </ul>
             </section>
-            <section class="actividades__galery">
-                <div class="actividades__galery-list container">
-                    <picture class="actividades__galery-item">
-                        <img src="img/image19.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image1.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image17.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image3.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image15.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image5.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
-                    <picture class="actividades__galery-item">
-                        <img src="img/image18.webp" class="actividades__galery-item-img" alt="">
-                    </picture>
+            <div class="b">
+                <div class="b-info container">
+                    <h3>Visita nuestro perfil de instagram para ver más imagenes y videos.</h3>
+                    <div class="b-info-img">
+                        <img src="img/icon/instagram-2-1-logo-svgrepo-com.svg" alt="icono de instagram" class="b-img">
+                        <button class="btn-1"><a download="Planilla-LCA" href="img/insta.jpg" target="_blank">Visitar</a></button>
+                    </div>
                 </div>
-            </section>
+            </div>
         </main>
         <footer>
             <div class="footer__list">
@@ -111,6 +85,7 @@
                     <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
                 </div>
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
                     <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
