--- a/nosotros.html
+++ b/nosotros.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
     <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="whatsapp">
-            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315" target="_blank"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -41,25 +41,24 @@
             <section class="hero">
                 <img src="img/fondo textura cortina rojo.webp" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <h2>¿QUIENES SOMOS?</h2>
+                    <h2>¿Quiénes Somos?</h2>
                     <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
-                    una institución dedicada a la formación artística integral y profesional. 
+                    una institución dedicada a la formación artística integral y profesional.
                     Desde nuestra fundación, nos hemos comprometido a enriquecer el 
                     patrimonio cultural de nuestra región, ofreciendo un espacio para el desarrollo del talento.</p>
                 </div>
             </section>
             <section class="nosotros__historia container">
-                    <img src="img/image4.webp" class="nosotros__historia-img" alt="">
-                    <div class="nosotros__historia-info">
-                        <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
-                        <p>La Academia de Actuación y Danzas “Luces, Cámaras y Acción” fue fundada 
-                            en 2019 por su actual directora y coordinadora, Génesis Niño. Iniciamos 
-                            como una pequeña agrupación de solo 5 estudiantes, con clases en casa de 
-                            la directora. Gracias a nuestro crecimiento y consolidación, 
-                            nos trasladamos posteriormente a la Casa de la Cultura Profesor Adelmo Ceballos. 
-                            Hoy en día, nos hemos convertido en una institución
-                            que forma artistas integrales y profesionales en diversas disciplinas.</p>
-                    </div>
+                <img src="img/image1.webp" class="nosotros__historia-img" alt="">
+                <div class="nosotros__historia-info">
+                    <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
+                    <p>La Academia de Actuación y Danzas “Luces, Cámaras y Acción” fue fundada 
+                        en 2019 por su actual directora y coordinadora, Génesis Niño. Iniciamos 
+                        como una pequeña agrupación de solo 5 estudiantes, con clases en casa de 
+                        la directora. Gracias a nuestro crecimiento y consolidación, 
+                        nos trasladamos posteriormente a la Casa de la Cultura Profesor Adelmo Ceballos. 
+                        Hoy en día, nos hemos convertido en una institución que forma artistas integrales y profesionales en diversas disciplinas.</p>
+                </div>
             </section>
             <section class="nosotros__mvv">
                 <ul class="nosotros__mvv-list container">
@@ -75,10 +74,10 @@
                         la excelencia pedagógica de cada programa ofrecido por la Academia.</p>
                     </li>
                     <li class="nosotros__mvv-item">
-                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
+                        <img src="img/image2.webp" class="nosotros__mvv-item-img" alt="">
                     </li>
                     <li class="nosotros__mvv-item">
-                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
+                        <img src="img/image3.webp" class="nosotros__mvv-item-img" alt="">
                     </li>
                     <li class="nosotros__mvv-item">
                         <h2>Misión</h2>
@@ -96,32 +95,31 @@
                         sino también disciplinados, seguros de sí mismos y con un profundo amor por el arte.</p>
                     </li>
                     <li class="nosotros__mvv-item">
-                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
+                        <img src="img/image4.jpg" class="nosotros__mvv-item-img" alt="">
                     </li>
                 </ul>
             </section>
             <section class="nosotros__docentes">
-                <div class="nosotros__docentes-title">
-                <h2>Nuestro Equipo</h2></div>
+                <h2 class="nosotros__docentes-title">Nuestro Equipo</h2>
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
                         <h3>Eduar Rincones</h3>
-                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
+                        <img src="img/user.webp" class="nosotros__docentes-item-img">
                         <h4>Teatro</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <h3>Genesis Niño</h3>
-                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
-                        <h4>Actuación Y Cine</h4>
+                        <h3>Génesis Niño</h3>
+                        <img src="img/user.webp" class="nosotros__docentes-item-img">
+                        <h4>Actuación</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Nelsymar Niño</h3>
-                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
+                        <img src="img/user.webp" class="nosotros__docentes-item-img">
                         <h4>Danza</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Cristie Chirino</h3>
-                        <img src="img/image20.webp" class="nosotros__docentes-item-img">
+                        <img src="img/user.webp" class="nosotros__docentes-item-img">
                         <h4>Gimnasia</h4>
                     </div>
                 </div>
@@ -144,9 +142,14 @@
                     <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
                 </div>
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
                     <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </body>
 </html>
