--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
     <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <main>
+            <div class="whatsapp">
+                <a href="https://wa.me/04125504315" target="_blank">
+                    <img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon">
+                </a>
+            </div>
+            <div class="scroll">
+                <a href="#top">
+                    <img src="img/icon/scroll top.svg" alt="" class="scroll-icon">
+                </a>
+            </div>
             <header id="scroll">
                 <div class="header container" id="e">
                     <input type="checkbox" class="header__checkbox" id="open-menu">
@@ -32,42 +43,52 @@
                     </nav>
                 </div>
             </header>
-            <section class="inicio__hero hero">
-                <img src="img/image6.webp" class="hero-img" alt="">
-                <div class="hero-info container">
+            <section class="inicio__hero">
+                <div class="hero-info">
                     <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
                     <h2>LUCES, CÁMARA Y ACCIÓN</h2>
-                    <button class="inicio__hero-btn">
-                        <a href="#scroll"><img src="img/icon/arrow-next.svg" class="inicio__hero-icon" alt=""></a>
-                    </button>
+                </div>
+                <div class="inicio__hero-carrusel-container">
+                    <ul class="inicio__hero-carrusel-list">
+                        <li class="inicio__hero-carrusel-item">
+                            <img src="img/image.webp" class="inicio__hero-carrusel-item-img">
+                        </li>
+                        <li class="inicio__hero-carrusel-item">
+                            <img src="img/image16.webp" class="inicio__hero-carrusel-item-img">
+                        </li>
+                        <li class="inicio__hero-carrusel-item">
+                            <img src="img/image20.webp" class="inicio__hero-carrusel-item-img">
+                        </li>
+                    </ul>
                 </div>
             </section>
-            <div class="whatsapp">
-                <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
-            </div>
-            <div class="scroll">
-                <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
-            </div>
             <section class="inicio__enfoque">
                 <div class="container">
-                    <h2 class="inicio__enfoque-title" id="scroll">Nuestra Academia</h2>
+                    <h2 class="inicio__enfoque-title">Nuestra Academia</h2>
                     <p>Somos luces, cámara y acción, una academia dedicada a formar artistas integrales en el mundo de las artes escénicas</p>
                     <div  class="inicio__enfoque-list">
-                        <div class="inicio__enfoque-item">
+                        <div class="inicio__enfoque-item" 
+                        data-aos="fade-right"
+                        data-aos-duration="1000">
+
                             <img src="img/icon/medal-award.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Actuación Profesional</h3>
                                 <p>Formación para el escenario, la televisión y el cine</p>
                             </div>
                         </div>
-                        <div class="inicio__enfoque-item">
+                        <div class="inicio__enfoque-item" 
+                        data-aos="fade-right"
+                        data-aos-duration="750">
                             <img src="img/icon/ballerina-shoes.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Danza Multidisciplinaria</h3>
                                 <p>Dominio de múltiples estilos de danza, desde clásico a urbano</p>
                             </div>
                         </div>
-                        <div class="inicio__enfoque-item">
+                        <div class="inicio__enfoque-item"
+                        data-aos="fade-right"
+                        data-aos-duration="500">
                             <img src="img/icon/people-community.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Comunidad Artística</h3>
@@ -83,39 +104,39 @@
                     se tú el proximo protagonista de nustros shows</h3>
                 </div>
             </div>
-            <div class="programas__inscripcion">
+            <section class="inicio__inscripcion">
                 <h2>Pasos para Inscribirse</h2>
-                <div class="programas__inscripcion-list container">
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/select-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
+                <div class="inicio__inscripcion-list container">
+                    <li class="inicio__inscripcion-item" data-aos="flip-right">
+                        <img src="img/icon/select-svgrepo-com.svg" class="inicio__inscripcion-item-img" alt="">
+                        <div class="inicio__inscripcion-item-info">
                             <h4>Paso 1: Elegir</h4>
                             <p>Explora nuestros programas y 
                             elige el que mejor se adapte a tus 
                             intereses y objetivos artísticos.
-                            <span><a href="">Ver más</a></span></p>
+                            <span><a href="programas.html">Ver más</a></span></p>
                         </div>
                     </li>
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/document-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
+                    <li class="inicio__inscripcion-item" data-aos="flip-left">
+                        <img src="img/icon/document-svgrepo-com.svg" class="inicio__inscripcion-item-img" alt="">
+                        <div class="inicio__inscripcion-item-info">
                             <h4>Paso 2: Requisitos</h4>
                             <p>Revisa los requisitos de inscripción 
                             y rellena la planilla de inscripción. 
-                            <span><a href="">Ver más</a></span></p>
+                            <span><a download="Planilla-LCA" href="download/planilla.pdf">Ver más</a></span></p>
                         </div>
                     </li>
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/phone-handset-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
+                    <li class="inicio__inscripcion-item" data-aos="flip-left">
+                        <img src="img/icon/phone-handset-svgrepo-com.svg" class="inicio__inscripcion-item-img" alt="">
+                        <div class="inicio__inscripcion-item-info">
                             <h4>Paso 3: Contactar</h4>
                             <p>Comunícate con nuestro equipo a través 
                             de nuestro para concluir la inscripción.
-                            <span><a href="">Ver más</a></span></p>
+                            <span><a href="contacto.html">Ver más</a></span></p>
                         </div>
                     </li>
                 </div>
-            </div>  
+            </section>  
         </main>
         <footer>
             <div class="footer__list">
@@ -134,9 +155,14 @@
                     <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
                 </div>
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
                     <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </body>
 </html>
