--- a/programas.html
+++ b/programas.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="cultura,danza,teatro,actuacion,acaemia,quibor,lara">
     <link rel="icon" href="img/Logos/LCA.png" type="image/png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="whatsapp">
-            <a href="https://wa.me/04125504315"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            <a href="https://wa.me/04125504315" target="_blank"><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
         </div>
         <div class="scroll">
             <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
@@ -39,7 +40,7 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image13.webp" class="hero-img" alt="">
+                <img src="img/image5.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Programas Artísticos</h2>
                 </div>
@@ -51,8 +52,8 @@
             </div>
             <section class="programas">
                 <div class="programas-list container">
-                    <article class="programas-item">
-                        <img src="img/image21.png" alt="" class="programas-item-img">
+                    <article class="programas-item" data-aos="zoom-in-right">
+                        <img src="img/image6.png" alt="" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Babys</h3>
                             <ul>
@@ -64,8 +65,8 @@
                             <h3>3 ~ 5 años</h3>
                         </div>
                     </article>
-                    <article class="programas-item">
-                        <img src="img/image22.png" class="programas-item-img">
+                    <article class="programas-item" data-aos="zoom-in-left">
+                        <img src="img/image7.png" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Infantil</h3>
                             <ul>
@@ -77,8 +78,8 @@
                             <h3>6 ~ 10 años</h3>
                         </div>
                     </article>
-                    <article class="programas-item">
-                        <img src="img/image23.png" class="programas-item-img">
+                    <article class="programas-item" data-aos="zoom-in-right">
+                        <img src="img/image8.png" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Juvenil</h3>
                             <ul>
@@ -90,8 +91,8 @@
                             <h3>11 ~ 17 años</h3>
                         </div>
                     </article>
-                    <article class="programas-item">
-                        <img src="img/image24.png" alt="" class="programas-item-img">
+                    <article class="programas-item" data-aos="zoom-in-left">
+                        <img src="img/image9.png" alt="" class="programas-item-img">
                         <div class="programas-info">
                             <h3>Elenco Avanzado</h3>
                             <ul>
@@ -107,7 +108,7 @@
             </section>
             <div class="n">
                 <div class="n-info container">
-                    <h3>Inscribete en nuestra Academia y subete al tren del talento <br>Más que una Academia somos una familia.</h3>
+                    <h3>Inscríbete en nuestra Academia y súbete al tren del talento <br>Más que una Academia somos una familia.</h3>
                 </div>
             </div>
         </main>
@@ -128,9 +129,14 @@
                     <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
                 </div>
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
                     <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     </body>
 </html>
