--- a/clases.html
+++ b/clases.html
@@ -57,14 +57,14 @@
             <seccion class="clases">
                 <div class="clases__list">
                     <div class="clases__item" data-aos="fade-right">
-                        <img src="img/image14.png" class="clases__item-img" alt="">
+                        <img src="img/image14.png" class="clases__item-img">
                         <div class="clases__item-info">
                             <h2>Danza</h2>
                             <p>Nuestras clases de danza se centran en el movimiento, el ritmo y la expresión corporal. Los estudiantes 
                             aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
+                                <button class="btn-2"><a href="https://forms.gle/mg8ywQazUoYEappr8" target="_blank">Inscribirme</a></button>
                             </div>
                         </div>
                     </div>
@@ -75,20 +75,20 @@
                             dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
+                                <button class="btn-2"><a href="https://forms.gle/mg8ywQazUoYEappr8" target="_blank">Inscribirme</a></button>
                             </div>
                         </div>
-                        <img src="img/image11.webp" class="clases__item-img" alt="">
+                        <img src="img/image11.webp" class="clases__item-img">
                     </div>
                     <div class="clases__item" data-aos="fade-right">
-                        <img src="img/image13.webp" class="clases__item-img" alt="">
+                        <img src="img/image13.webp" class="clases__item-img">
                         <div class="clases__item-info">
                             <h2>Actuación</h2>
                             <p>Enfocado en las habilidades necesarias para la interpretación en diversos formatos, como el cine, la televisión y el teatro. Los estudiantes 
                             trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
+                                <button class="btn-2"><a href="https://forms.gle/mg8ywQazUoYEappr8" target="_blank">Inscribirme</a></button>
                             </div>
                         </div>
                     </div>
@@ -100,10 +100,10 @@
                             el control del cuerpo y una postura correcta.</p>
                             <div class="clases__item-btn">
                                 <button class="btn-1"><a href="contacto.html">Contactar</a></button>
-                                <button class="btn-2"><a download="Planilla-LCA" href="download/planilla.pdf" target="_blank">Planilla</a></button>
+                                <button class="btn-2"><a href="https://forms.gle/mg8ywQazUoYEappr8" target="_blank">Inscribirme</a></button>
                             </div>
                         </div>
-                        <img src="img/image4.jpg" class="clases__item-img" alt="">
+                        <img src="img/image4.jpg" class="clases__item-img">
                     </div>
                 </div>
             </seccion>
@@ -111,22 +111,26 @@
         <footer>
             <div class="footer__list">
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="Logo_LCA" class="footer__item-icon-lca">
+                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
+                </div>
+
+                <div class="footer__item">
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo_UPTAEB" class="footer__item-icon-uptaeb">
+                    <h4 class="footer__info">Este sitio web fue desarrollado por la UPTAEB como un proyecto sociotecnológico.</h4>
+                </div>
+                
+                <div class="footer__item">
+                    <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="footer__item-icon-dev">
                     <h3 class="footer__info-title">Desarrolladores</h3>
                     <ul class="footer__info-list">
-                        <li><p>Jesús D. Pérez B.</p></li>
-                        <li><p>Jhosber L. Gil B.</p></li>
                         <li><p>Jhonny D. Dávila R.</p></li>
+                        <li><p>Jesús D. Pérez B.</p></li>
                         <li><p>Jasneli E. Rodríguez H.</p></li>
                         <li><p>Beritzon R. Colmenares T.</p></li>
+                        <li><p>Jhosber L. Gil B.</p></li>
+                        <li><p>Tutor: Lorelys Alvarado.</p></li>
                     </ul>
-                </div>
-                <div class="footer__item">
-                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="footer__item-icon-uptaeb">
-                    <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
-                </div>
-                <div class="footer__item">
-                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
-                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
