--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="contacto__item-info">
 
-                            <img src="img/icon/whatsapp.svg" class="contacto__item-icon-whapp" alt="whatsapp">
+                            <img src="img/icon/whatsapp.svg" class="contacto__item-icon-whapp" alt="Academia_LCA_whatsapp">
                             <h3>WhatsApp</h3>
                             <h4>Envíanos un mensaje directo y te responderemos a la brevedad.</h4>
                             <button class="btn-1"><a href="https://wa.me/04125504315" target="_blank">Enviar Mensaje</a></button>
@@ -64,8 +64,8 @@
                             <h3>Síguenos</h3>
                             <h4>No te pierdas nuestras últimas noticias, eventos y actualizaciones.</h4>
                             <div>
-                                <a href="https://www.facebook.com/academia.lca/" target="_blank"><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="facebook"></a>
-                                <a href="https://www.instagram.com/academia.lca/" target="_blank"><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="instagram"></a>
+                                <a href="https://www.facebook.com/academia.lca/" target="_blank"><img src="img/icon/facebook-svgrepo-com.svg" class="contacto__item-redes-icon" alt="Academia_LCA_facebook"></a>
+                                <a href="https://www.instagram.com/academia.lca/" target="_blank"><img src="img/icon/instagram-svgrepo-com.svg" class="contacto__item-redes-icon" alt="Academia_LCA_instagram"></a>
                             </div>
                         </div>
                     </div>
@@ -83,20 +83,20 @@
                     <div class="contacto__item">
                         <div class="contacto__item-info">
                             <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="contacto__item-devs-icon">
-                            <h2>Equipo de desarrollo</h2>
+                            <h2>Equipo de Desarrollo</h2>
                             <ul>
                                 <li><h4>Jhonny D. Dávila R.</h4></li>
                                 <li><h4>Jesús D. Pérez B.</h4></li>
                                 <li><h4>Jasneli Rodríguez</h4></li>
                                 <li><h4>Beritzon R. Colmenarez</h4></li>
-                                <li><h4>Jhosber Gil</h4></li>
+                                <li><h4>Jhosber L. Gil B.</h4></li>
                             </ul>
                         </div>
                     </div>
                     <div class="contacto__item">
                         <div class="contacto__item-info">
                             <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="contacto__item-icon-uptaeb">
-                            <h4>Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                            <h4>Este sitio web fue desarrollado por la UPTAEB como un proyecto sociotecnológico.</h4>
                             <h4>Tutor: Lorelys Alvarado.</h4>
                         </div>
                     </div>
