--- a/galeria.html
+++ b/galeria.html
@@ -60,7 +60,7 @@
             </section>
             <div class="b">
                 <div class="b-info container">
-                    <h3>Visita nuestro perfil de instagram para ver más imagenes y videos.</h3>
+                    <h3>Visita nuestro perfil de instagram para ver más imágenes y videos.</h3>
                     <div class="b-info-img">
                         <img src="img/icon/instagram-2-1-logo-svgrepo-com.svg" alt="icono de instagram" class="b-img">
                         <button class="btn-1"><a download="Planilla-LCA" href="img/insta.jpg" target="_blank">Visitar</a></button>
@@ -71,24 +71,32 @@
         <footer>
             <div class="footer__list">
                 <div class="footer__item">
+                    <img src="img/Logos/LCA.png" alt="Logo_LCA" class="footer__item-icon-lca">
+                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
+                </div>
+
+                <div class="footer__item">
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo_UPTAEB" class="footer__item-icon-uptaeb">
+                    <h4 class="footer__info">Este sitio web fue desarrollado por la UPTAEB como un proyecto sociotecnológico.</h4>
+                </div>
+                
+                <div class="footer__item">
+                    <img src="img/icon/code-tech-dev-svgrepo-com.svg" class="footer__item-icon-dev">
                     <h3 class="footer__info-title">Desarrolladores</h3>
                     <ul class="footer__info-list">
-                        <li><p>Jesús D. Pérez B.</p></li>
-                        <li><p>Jhosber L. Gil B.</p></li>
                         <li><p>Jhonny D. Dávila R.</p></li>
+                        <li><p>Jesús D. Pérez B.</p></li>
                         <li><p>Jasneli E. Rodríguez H.</p></li>
                         <li><p>Beritzon R. Colmenares T.</p></li>
+                        <li><p>Jhosber L. Gil B.</p></li>
+                        <li><p>Tutor: Lorelys Alvarado.</p></li>
                     </ul>
-                </div>
-                <div class="footer__item">
-                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="footer__item-icon-uptaeb">
-                    <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
-                </div>
-                <div class="footer__item">
-                    <img src="img/Logos/LCA.png" alt="" class="footer__item-icon-lca">
-                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
